--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
     "pusher": "^5.1.1-beta"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
