--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "postcss": "^8.4.21",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7",
     "typescript": "4.8.4"
   }
